Apply suggestions from code review
Signed-off-by: Jakub Scholz <www@scholzj.com>

Co-authored-by: PaulRMellor <47596553+PaulRMellor@users.noreply.github.com>

--- a/_includes/join-us/join-us-contribute-to-strimzi-band.html
+++ b/_includes/join-us/join-us-contribute-to-strimzi-band.html
@@ -4,59 +4,58 @@
       <h2>Contribute to Strimzi</h2>
 
       <p>Contributing to an open-source project is not just about writing code. 
-        There are many different ways you can contribute to Strimzi.</p>
+        There are many other ways you can contribute to Strimzi.</p>
 
       <h3>Join the community</h3>
 
       <p>You can start by joining the community. 
-        We have a <a href="https://slack.cncf.io/"><code>#strimzi</code> channel on the CNCF Slack workspace</a> which you can join and meet other Strimzi users. 
+        We have a <a href="https://slack.cncf.io/"><code>#strimzi</code> channel on the CNCF Slack workspace</a> that you can join and meet other Strimzi users. 
         We also have <a href="https://lists.cncf.io/g/cncf-strimzi-users">user</a> and <a href="https://lists.cncf.io/g/cncf-strimzi-dev">developer</a> mailing lists. 
-        You can also come to our <a href="https://github.com/strimzi/strimzi-kafka-operator#strimzi-community-meetings">community calls</a> which happen every two weeks. 
-        On the community calls, you will meet the maintainers and other community members.
+        We also have <a href="https://github.com/strimzi/strimzi-kafka-operator#strimzi-community-meetings">community calls</a> every two weeks. 
+        If you come to the community calls, you will meet maintainers and other community members.
         You can learn about the current work or future plans.
-        But you can of course also raise questions, discuss issues you have or just chat about your Strimzi use-cases.
-        Don’t forget that in all these places you should follow the <a href="https://github.com/strimzi/governance/blob/main/CODE_OF_CONDUCT.md">code of conduct</a> and just be nice to others!</p>
+        But you can also raise questions, discuss issues, or just chat about specific Strimzi use-cases or anything Strimzi-related.
+        We keep things friendly. In all our communications, on whatever platform, we expect everyone to follow a <a href="https://github.com/strimzi/governance/blob/main/CODE_OF_CONDUCT.md">code of conduct</a>.</p>
 
       <h3>Spread the word</h3>
 
-      <p>The easiest way you can help Strimzi is by spreading the word. 
-        It can start by something simple: <a href="https://github.com/strimzi">star Strimzi repositories on GitHub</a>, subscribe to <a gref="https://youtube.com/c/Strimzi">our YouTube channel</a> or <a href="https://twitter.com/strimziio">follow us on Twitter</a> and like / retweet our tweets. 
-        You can of course also talk about Strimzi on your social media accounts to help more people learn about our project.
-        And don't forget to tag us, so that we can like or retweet it.
+      <p>If you like using Strimzi, and want the community to grow, the easiest way you can help is by spreading the word. 
+        It can be something as simple as <a href="https://github.com/strimzi"><i>starring</i> the Strimzi repositories on GitHub</a>, subscribing to the <a gref="https://youtube.com/c/Strimzi">Strimzi YouTube channel</a>, or <a href="https://twitter.com/strimziio">following us on Twitter</a> and liking or retweeting our tweets. 
+        Talk about Strimzi on your social media accounts. Help more people learn about our project.
+        And don't forget to tag us, so that we can like or retweet your contributions!
         If you use Strimzi in production, you can add your company to our <a href="https://github.com/strimzi/strimzi-kafka-operator/blob/main/ADOPTERS.md">list of adopters</a>. 
         And you can also add your logo to the <a href="https://strimzi.io/">Strimzi website</a>. 
-        The adopters list helps other users to see who already uses Strimzi and might make them more comfortable with using it as well.</p>
+        The adopters list helps other users to see who already uses Strimzi. This can be encouraging if they are looking to adopt Strimzi themselves.</p>
 
       <p>Another way to spread the word about Strimzi is by writing blog posts. 
-        If you have some interesting topics. 
-        For example about how you use Strimzi and your Strimzi use cases or about using Strimzi with other projects and technologies. 
-        You can <a href="https://strimzi.io/blog/2021/07/29/how-to-write-blog-posts-for-strimzi-blog/">write a blog post</a> for our <a href="https://strimzi.io/blog/">own blog</a> which is on the Strimzi website. 
-        But you can also publish it on your personal or company blog and let us know and we can help you share it with the Strimzi community.</p>
+        You might want to write about how you used Strimzi to achieve a particular goal or used it with other projects and technologies. 
+        You can <a href="https://strimzi.io/blog/2021/07/29/how-to-write-blog-posts-for-strimzi-blog/">contribute a post</a> to our <a href="https://strimzi.io/blog/">Strimzi blog</a>. 
+        Or we can help share a post you published on your personal or company blog with the Strimzi community.</p>
 
       <p>Talking at conferences or meetups is another great way to spread the word about Strimzi. 
         And it doesn’t matter whether it is a small local meetup or a big conference for thousands of attendees. 
         Let us know about your talks and we can share them with the community. 
         If you want, we can also help to review your materials or conference proposals. 
-        If you are an organizer of a conference or meetup and want to have someone to talk about Strimzi, we can also try to help you find the right speaker.</p>
+        If you are an organizer of a conference or meetup, and you're looking for someone to talk about Strimzi, we can also try to help you find the right speaker.</p>
 
-      <h3>Ask for Help or Help Others</h3>
+      <h3>Ask for help and help others</h3>
 
-      <p>If you are new to Strimzi, you might have many questions and or run into some beginner issues. 
-        We hope that our <a href="https://strimzi.io/quickstarts/">quickstarts</a>, our <a href="https://strimzi.io/documentation/">documentation</a> or the <a gref="https://www.youtube.com/playlist?list=PLpI4X8PMthYeCSpy9a-mGtvDbMgqGNYNy">tutorials</a> on our YouTube channels make it easy to get started. 
+      <p>If you're new to Strimzi, you'll probably have lots of questions. 
+        We hope that our <a href="https://strimzi.io/quickstarts/">quickstarts</a>, <a href="https://strimzi.io/documentation/">documentation</a>, and <a gref="https://www.youtube.com/playlist?list=PLpI4X8PMthYeCSpy9a-mGtvDbMgqGNYNy">tutorials</a> on our YouTube channels help you to get started. 
         But don’t be afraid to ask if you have any questions or issues. 
-        The <a href="https://slack.cncf.io/"><code>#strimzi</code> Slack channel</a>, the <a href="https://lists.cncf.io/g/cncf-strimzi-users">user mailing list</a> or the <a href="https://github.com/strimzi/strimzi-kafka-operator/discussions">GitHub discussions</a> are the best places to ask questions or ask for help.</p>
+        The <a href="https://slack.cncf.io/"><code>#strimzi</code> Slack channel</a>, <a href="https://lists.cncf.io/g/cncf-strimzi-users">user mailing list</a>, and <a href="https://github.com/strimzi/strimzi-kafka-operator/discussions">GitHub discussions</a> are the best places to ask questions or ask for help.</p>
 
-      <p>To get some useful and fast help, it is always good to cover the following points:</p>
+      <p>To get useful help fast, it is always good to cover the following points:</p>
       
       <ul>
-      <li>Check the documentation and discussion history before asking new question.</li>
+      <li>Check the documentation and discussion history before asking a new question.</li>
       <li>Explain what Strimzi and Kubernetes version you are using and in which environment you are running it. 
         There might be known issues or incompatibilities.</li>
       <li>Include as many logs and configurations as possible! 
-        A single log line or exception or just a small snippet of your custom resource might not be enough to understand the problem and to help. 
-        Ideally either share them directly in your question / issue formatted as code or as an attachment.
-        The easier you make it for other to understand your problem or question, the more likely it is someone will help you.
-        To collect the available logs and configurations, you can use the <a href="https://github.com/strimzi/strimzi-kafka-operator/blob/main/tools/report.sh">report tool</a> and just share the ZIP archive it generates.</li>
+        A single log line, or exception, or just a small snippet of your custom resource might not be enough to understand the problem and to help. 
+        Ideally, either share them directly with your question as code or an attachment.
+        The easier it is to understand your specific issue or question, the more likely it is someone can help you.
+        To collect logs and configurations, you can use the <a href="https://github.com/strimzi/strimzi-kafka-operator/blob/main/tools/report.sh">report tool</a> and share the ZIP archive it generates.</li>
       </ul>
 
       <p>Remember that others are helping you for free. 
@@ -64,33 +63,32 @@
         So be patient.</p>
 
       <p>As a new user, you are always best positioned to suggest improvements to the documentation. 
-        If you misunderstood something or if you think something is not sufficiently covered, you can report it to use either on any of our communication channels or by opening an issue. 
-        And you can of course also just <a href="https://strimzi.io/contributing/guide/">open a PR and fix the documentation</a>.</p>
+        If you misunderstood something or you think something is not sufficiently covered, you can feed back on any of our communication channels. Or you can open an issue. 
+        Alternatively, you can <a href="https://strimzi.io/contributing/guide/">open a PR and contribute to the documentation directly</a>.</p>
 
-      <p>If you already have some experience with Apache Kafka or with Strimzi and Kubernetes, you can try to help others by answering questions or providing guidance and suggestions. 
-        You can also help by reviewing the documentation and either suggesting or contributing improvements. 
-        You can also help by making tutorials - for example as part of the documentation, a blog post or as a video.</p>
+      <p>If you already have some experience with Apache Kafka or with Strimzi and Kubernetes, you can try answering questions or providing guidance and suggestions. 
+        You can also help by reviewing or contributing  to the documentation. Maybe put together a tutorial as part of the documentation, or as a blog post or video.</p>
 
       <p>Our documentation is currently in English. 
         But not everyone speaks English perfectly. 
         So you can also help by translating our documentation or blog posts into other languages.</p>
 
-      <h3>Provide Feedback and Improve Quality</h3>
+      <h3>Provide Feedback and improve quality</h3>
 
-      <p>Feedback is important for. 
-        Reading about how great Strimzi is always feels great. 
-        But also negative feedback is important and helps us make Strimzi better. 
-        You can share your feedback for example on Slack or mailing lists.</p>
+      <p>Feedback is important for Strimzi. 
+        Reading about how great Strimzi is always feels good. 
+        But negative feedback is also important, because it helps to improve Strimzi. 
+        You can share your feedback on Slack or mailing lists.</p>
 
       <p>But feedback can have many different forms. 
-        And one of the ways to provide feedback is for example also <a href="https://github.com/strimzi/strimzi-kafka-operator/issues/new/choose">reporting bugs, suggesting improvements or opening enhancements requests</a> for features you would like to see. 
-        You can also write <a href="https://github.com/strimzi/proposals">proposals</a> describing new features and how they should work and be implemented. 
-        You can do it even if you cannot or do not plan to implement them - someone else might.</p>
+        You can provide feedback by <a href="https://github.com/strimzi/strimzi-kafka-operator/issues/new/choose">creating issues</a>. The issue can be to report a bug, suggest an improvement, or request an enhancement for a feature you would like to see. 
+        You can also write <a href="https://github.com/strimzi/proposals">proposals</a> describing new features and how they should be implemented. 
+        You can propose something even if you do not plan to implement it. If it's a good idea, someone else might.</p>
 
       <p>You can also help us to improve the quality of our releases and help us test Strimzi. 
-        As most modern projects, we rely heavily on <a href="https://strimzi.io/blog/2020/09/21/introduction-to-system-tests/">automated tests</a>. 
-        You can always help us improve the tests - you can add new tests to improve the test coverage, improve their execution time and so on. 
-        But you can also help by manually testing Strimzi in different configurations, environments and in different use-cases and report the results and any issues you found.</p>
+        As with most modern projects, we rely heavily on <a href="https://strimzi.io/blog/2020/09/21/introduction-to-system-tests/">automated tests</a>. 
+        You can help us improve the tests. You can add new tests to improve the test coverage, improve their execution time, and so on. 
+        But you can also help by manually testing Strimzi in different configurations, environments, and in different use-cases. You can report the results and any issues you found.</p>
 
       <p>Every Strimzi release starts with a release candidate. 
         Testing the RCs in your environments with your configurations and making sure everything works before the final release is done is also very helpful. 
@@ -98,25 +96,25 @@
 
       <h3>Write code</h3>
 
-      <p>Since Strimzi is a software project, you can of course also contribute by writing code. 
-        One of the things which makes Strimzi different from most other cloud native projects is that most of its parts are written in Java. 
-        So if you want to contribute to an exciting project and work with modern technologies such as Kubernetes but do not want to learn Golang, then Strimzi is the right project for you. 
+      <p>Since Strimzi is a software project, you can also contribute by writing code. 
+        One of the things which makes Strimzi different from most other cloud-native projects is that most of its parts are written in Java. 
+        So if you want to contribute to an exciting project and work with modern technologies such as Kubernetes, but do not want to learn Golang, then Strimzi is the right project for you. 
         And if you are more interested in Apache Kafka than in Kubernetes, you will find Strimzi interesting as well.</p>
 
       <p>Our <a href="https://github.com/strimzi/strimzi-kafka-operator/blob/main/development-docs/DEV_GUIDE.md">developer guide</a> should help you to learn how to develop and build the code. 
-        If you are using Strimzi, you can contribute features or improvements which you are missing. 
-        You can also check the <a href="https://github.com/strimzi/strimzi-kafka-operator/issues">open issues on GitHub</a> and fix some bugs or implement some enhancements.
-        We always try to have some <a href="https://github.com/strimzi/strimzi-kafka-operator/issues?q=is%3Aopen+is%3Aissue+label%3Agood-start">issues labeled as <i>good start</i></a> which are suitable for beginners.
-        If you plan to work on some bigger contribution, it might be good idea to check with us first - for example in the <a href="https://slack.cncf.io/"><code>#strimzi-dev</code> channel on CNCF Slack</a>. 
-        Bigger changes with major impact on the APIs might require <a href="https://github.com/strimzi/proposals">writing a proposal</a> and having it approved by the community. 
+        If you are using Strimzi, you can contribute any features or improvements that you are missing. 
+        You can also check the <a href="https://github.com/strimzi/strimzi-kafka-operator/issues">open issues on GitHub</a> and fix bugs or implement enhancements.
+        We always try to have some <a href="https://github.com/strimzi/strimzi-kafka-operator/issues?q=is%3Aopen+is%3Aissue+label%3Agood-start">issues labeled as <i>good start</i></a>. These are suitable for beginners.
+        If you plan to work on a bigger contribution, it might be good idea to check with us first. You could drop your suggestion in the <a href="https://slack.cncf.io/"><code>#strimzi-dev</code> channel on CNCF Slack</a>. 
+        Bigger changes with major impact on the APIs might require <a href="https://github.com/strimzi/proposals">a proposal</a> that's approved by the community. 
         For small changes and bug fixes, you can just open the PR and we will review it. 
         Programming also doesn’t always mean just new features or bugfixes. 
-        You can also contribute to our tests for example by writing <a href="https://strimzi.io/blog/2020/12/03/how-the-system-tests-works/">new system tests</a>.</p>
+        You can also contribute to our tests by writing <a href="https://strimzi.io/blog/2020/12/03/how-the-system-tests-works/">new system tests</a>.</p>
 
-      <p>The main part of Strimzi are the Kubernetes operators. 
-        But don’t forget that Strimzi also has many <a href="https://github.com/orgs/strimzi/repositories">smaller sub-projects</a> such as for example the <a href="https://github.com/strimzi/strimzi-kafka-bridge">Bridge</a>, the <a href="https://github.com/strimzi/strimzi-kafka-oauth">OAuth library</a> or the <a href="https://github.com/strimzi/strimzi-canary">Canary</a> which is the only sub-project written in Golang instead of Java. 
+      <p>Kubernetes operators are central to Strimzi. 
+        But Strimzi also has many <a href="https://github.com/orgs/strimzi/repositories">smaller sub-projects</a>, such as the <a href="https://github.com/strimzi/strimzi-kafka-bridge">Bridge</a>, the <a href="https://github.com/strimzi/strimzi-kafka-oauth">OAuth library</a>, and the <a href="https://github.com/strimzi/strimzi-canary">Canary</a>. Canary is the only sub-project written in Golang instead of Java. 
         Some of the sub-projects can be also used independently of Strimzi with any Apache Kafka installation. 
-        So even if you are not running Apache Kafka on Kubernetes, you can still find some project to contribute to.</p>
+        So even if you are not running Apache Kafka on Kubernetes, you can still find a project to contribute to.</p>
 
     </div>
   </div>
