Review comments KS
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/join-us/join-us-contribute-to-strimzi-band.html
+++ b/_includes/join-us/join-us-contribute-to-strimzi-band.html
@@ -1,12 +1,12 @@
 <div class="join-us-band">
   <div class="component-slim grid-wrapper">
     <div class="width-12-12">
-      <h2>Contribute to Strimzi</h2>
+      <h2 id="contribute-to-strimzi">Contribute to Strimzi</h2>
 
       <p>Contributing to an open-source project is not just about writing code. 
         There are many other ways you can contribute to Strimzi.</p>
 
-      <h3>Join the community</h3>
+      <h3 id=join-the-community>Join the community</h3>
 
       <p>You can start by joining the community. 
         We have a <a href="https://slack.cncf.io/"><code>#strimzi</code> channel on the CNCF Slack workspace</a> that you can join and meet other Strimzi users. 
@@ -17,28 +17,7 @@
         But you can also raise questions, discuss issues, or just chat about specific Strimzi use-cases or anything Strimzi-related.
         We keep things friendly. In all our communications, on whatever platform, we expect everyone to follow a <a href="https://github.com/strimzi/governance/blob/main/CODE_OF_CONDUCT.md">code of conduct</a>.</p>
 
-      <h3>Spread the word</h3>
-
-      <p>If you like using Strimzi, and want the community to grow, the easiest way you can help is by spreading the word. 
-        It can be something as simple as <a href="https://github.com/strimzi"><i>starring</i> the Strimzi repositories on GitHub</a>, subscribing to the <a gref="https://youtube.com/c/Strimzi">Strimzi YouTube channel</a>, or <a href="https://twitter.com/strimziio">following us on Twitter</a> and liking or retweeting our tweets. 
-        Talk about Strimzi on your social media accounts. Help more people learn about our project.
-        And don't forget to tag us, so that we can like or retweet your contributions!
-        If you use Strimzi in production, you can add your company to our <a href="https://github.com/strimzi/strimzi-kafka-operator/blob/main/ADOPTERS.md">list of adopters</a>. 
-        And you can also add your logo to the <a href="https://strimzi.io/">Strimzi website</a>. 
-        The adopters list helps other users to see who already uses Strimzi. This can be encouraging if they are looking to adopt Strimzi themselves.</p>
-
-      <p>Another way to spread the word about Strimzi is by writing blog posts. 
-        You might want to write about how you used Strimzi to achieve a particular goal or used it with other projects and technologies. 
-        You can <a href="https://strimzi.io/blog/2021/07/29/how-to-write-blog-posts-for-strimzi-blog/">contribute a post</a> to our <a href="https://strimzi.io/blog/">Strimzi blog</a>. 
-        Or we can help share a post you published on your personal or company blog with the Strimzi community.</p>
-
-      <p>Talking at conferences or meetups is another great way to spread the word about Strimzi. 
-        And it doesn’t matter whether it is a small local meetup or a big conference for thousands of attendees. 
-        Let us know about your talks and we can share them with the community. 
-        If you want, we can also help to review your materials or conference proposals. 
-        If you are an organizer of a conference or meetup, and you're looking for someone to talk about Strimzi, we can also try to help you find the right speaker.</p>
-
-      <h3>Ask for help and help others</h3>
+      <h3 id="ask-for-help-and-help-others">Ask for help and help others</h3>
 
       <p>If you're new to Strimzi, you'll probably have lots of questions. 
         We hope that our <a href="https://strimzi.io/quickstarts/">quickstarts</a>, <a href="https://strimzi.io/documentation/">documentation</a>, and <a gref="https://www.youtube.com/playlist?list=PLpI4X8PMthYeCSpy9a-mGtvDbMgqGNYNy">tutorials</a> on our YouTube channels help you to get started. 
@@ -73,7 +52,7 @@
         But not everyone speaks English perfectly. 
         So you can also help by translating our documentation or blog posts into other languages.</p>
 
-      <h3>Provide Feedback and improve quality</h3>
+      <h3 id="provide-feedback-and-improve-quality">Provide Feedback and improve quality</h3>
 
       <p>Feedback is important for Strimzi. 
         Reading about how great Strimzi is always feels good. 
@@ -94,7 +73,28 @@
         Testing the RCs in your environments with your configurations and making sure everything works before the final release is done is also very helpful. 
         Fixing any bugs before the release is always better and easier than doing patch releases.</p>
 
-      <h3>Write code</h3>
+      <h3 id="spread-the-word">Spread the word</h3>
+
+      <p>If you like using Strimzi, and want the community to grow, the easiest way you can help is by spreading the word. 
+        It can be something as simple as <a href="https://github.com/strimzi"><i>starring</i> the Strimzi repositories on GitHub</a>, subscribing to the <a gref="https://youtube.com/c/Strimzi">Strimzi YouTube channel</a>, or <a href="https://twitter.com/strimziio">following us on Twitter</a> and liking or retweeting our tweets. 
+        Talk about Strimzi on your social media accounts. Help more people learn about our project.
+        And don't forget to tag us, so that we can like or retweet your contributions!
+        If you use Strimzi in production, you can add your company to our <a href="https://github.com/strimzi/strimzi-kafka-operator/blob/main/ADOPTERS.md">list of adopters</a>. 
+        And you can also add your logo to the <a href="https://strimzi.io/">Strimzi website</a>. 
+        The adopters list helps other users to see who already uses Strimzi. This can be encouraging if they are looking to adopt Strimzi themselves.</p>
+
+      <p>Another way to spread the word about Strimzi is by writing blog posts. 
+        You might want to write about how you used Strimzi to achieve a particular goal or used it with other projects and technologies. 
+        You can <a href="https://strimzi.io/blog/2021/07/29/how-to-write-blog-posts-for-strimzi-blog/">contribute a post</a> to our <a href="https://strimzi.io/blog/">Strimzi blog</a>. 
+        Or we can help share a post you published on your personal or company blog with the Strimzi community.</p>
+
+      <p>Talking at conferences or meetups is another great way to spread the word about Strimzi. 
+        And it doesn’t matter whether it is a small local meetup or a big conference for thousands of attendees. 
+        Let us know about your talks and we can share them with the community. 
+        If you want, we can also help to review your materials or conference proposals. 
+        If you are an organizer of a conference or meetup, and you're looking for someone to talk about Strimzi, we can also try to help you find the right speaker.</p>
+
+      <h3 id="write-code">Write code</h3>
 
       <p>Since Strimzi is a software project, you can also contribute by writing code. 
         One of the things which makes Strimzi different from most other cloud-native projects is that most of its parts are written in Java. 
