--- a/_includes/join-us/join-us-grow-with-strimzi-band.html
+++ b/_includes/join-us/join-us-grow-with-strimzi-band.html
@@ -1,7 +1,7 @@
 <div class="join-us-band">
   <div class="component-slim grid-wrapper">
     <div class="width-12-12">
-      <h2 class="blue">Grow with Strimzi</h2>
+      <h2 class="blue" id="grow-with-strimzi">Grow with Strimzi</h2>
       
       <p>Everyone can join the Strimzi community and grow with it. 
         It doesn’t matter what your skills are because you can contribute in many different ways. 
@@ -9,6 +9,8 @@
 
       <p>When you contribute to Strimzi - in one of the ways described above - you will become a Strimzi contributor. 
         We welcome all kinds of contributors - regardless whether you are implementing a feature needed by your company or whether you are just looking for something to spend your evenings with.</p>
+
+      <h3 id="component-owners">Component Owners</h3>
 
       <p>As you contribute more and more, you might focus on some particular areas and become what we call a <a href="https://github.com/strimzi/governance/blob/main/GOVERNANCE.md#component-owners"><i>“component owner”</i></a>. 
         A component owner has expertise and responsibility for one or more areas of the Strimzi project or sub-projects. 
@@ -18,6 +20,8 @@
       <p>Component owners can grow to become a <a href="https://github.com/strimzi/governance/blob/main/GOVERNANCE.md#maintainers">maintainer</a>. 
         But if you don’t want to specialize in one particular area of the Strimzi project, don’t worry. 
         You can keep contributing to different areas and sub-projects and become a maintainer before becoming a component owner first.</p>
+
+      <h3 id="maintainers">Maintainers</h3>
 
       <p>Maintainers take the overall responsibility for the whole project. 
         They provide leadership and steer its direction. But they also help to enforce its code of conduct, governance and independence. 
