--- a/_includes/homepage/homepage-content-band.html
+++ b/_includes/homepage/homepage-content-band.html
@@ -27,7 +27,7 @@
         <p>
           <strong class="text-caps">Contributing</strong>
           <br/>
-          Do you want to contribute to the Strimzi project? Learn how you can contribute on our <a href="{{site.baseurl}}/communjoin-usity/">Join Us</a> page.
+          Do you want to contribute to the Strimzi project? Learn how you can contribute on our <a href="{{site.baseurl}}/join-us/">Join Us</a> page.
         </p>
 
         <p>
