Corrected gref to href
Signed-off-by: Jaideep <guntupallijaideep@gmail.com>

--- a/_includes/join-us/join-us-contribute-to-strimzi-band.html
+++ b/_includes/join-us/join-us-contribute-to-strimzi-band.html
@@ -20,7 +20,7 @@
       <h3 id="ask-for-help-and-help-others">Ask for help and help others</h3>
 
       <p>If you're new to Strimzi, you'll probably have lots of questions. 
-        We hope that our <a href="https://strimzi.io/quickstarts/">quickstarts</a>, <a href="https://strimzi.io/documentation/">documentation</a>, and <a gref="https://www.youtube.com/playlist?list=PLpI4X8PMthYeCSpy9a-mGtvDbMgqGNYNy">tutorials</a> on our YouTube channels help you to get started. 
+        We hope that our <a href="https://strimzi.io/quickstarts/">quickstarts</a>, <a href="https://strimzi.io/documentation/">documentation</a>, and <a href="https://www.youtube.com/playlist?list=PLpI4X8PMthYeCSpy9a-mGtvDbMgqGNYNy">tutorials</a> on our YouTube channels help you to get started. 
         But don’t be afraid to ask if you have any questions or issues. 
         The <a href="https://slack.cncf.io/"><code>#strimzi</code> Slack channel</a>, <a href="https://lists.cncf.io/g/cncf-strimzi-users">user mailing list</a>, and <a href="https://github.com/strimzi/strimzi-kafka-operator/discussions">GitHub discussions</a> are the best places to ask questions or ask for help.</p>
 
@@ -76,7 +76,7 @@
       <h3 id="spread-the-word">Spread the word</h3>
 
       <p>If you like using Strimzi, and want the community to grow, the easiest way you can help is by spreading the word. 
-        It can be something as simple as <a href="https://github.com/strimzi"><i>starring</i> the Strimzi repositories on GitHub</a>, subscribing to the <a gref="https://youtube.com/c/Strimzi">Strimzi YouTube channel</a>, or <a href="https://twitter.com/strimziio">following us on Twitter</a> and liking or retweeting our tweets. 
+        It can be something as simple as <a href="https://github.com/strimzi"><i>starring</i> the Strimzi repositories on GitHub</a>, subscribing to the <a href="https://youtube.com/c/Strimzi">Strimzi YouTube channel</a>, or <a href="https://twitter.com/strimziio">following us on Twitter</a> and liking or retweeting our tweets. 
         Talk about Strimzi on your social media accounts. Help more people learn about our project.
         And don't forget to tag us, so that we can like or retweet your contributions!
         If you use Strimzi in production, you can add your company to our <a href="https://github.com/strimzi/strimzi-kafka-operator/blob/main/ADOPTERS.md">list of adopters</a>. 
