--- a/_includes/homepage/homepage-usedby-band.html
+++ b/_includes/homepage/homepage-usedby-band.html
@@ -15,6 +15,10 @@
     <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/smart-ix-logo-colored-transparent.png"></div>
     <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/axual_logo.png"></div>
     <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/marlow-logo.svg"></div>
+
+    <div class="width-4-12 width-12-12-m"></div>
+    <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/atruvia_logo_online_rgb.png"></div>
+    <div class="width-4-12 width-12-12-m"></div>
     
   </div>
   <div class="grid-wrapper margin-tb-xl">
