Add footnote about CRD v1beta1 support in the table with supported versions
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/downloads/supported-versions-band.html
+++ b/_includes/downloads/supported-versions-band.html
@@ -41,11 +41,16 @@
           <td class="version">{% if oRelease.bridgeVersion %}<a href="https://github.com/strimzi/strimzi-kafka-bridge/releases/tag/{{oRelease.bridgeVersion}}">{{oRelease.bridgeVersion}}</a>{% endif %}</td>
           <td class="version">{% if oRelease.oAuthVersion %}<a href="https://github.com/strimzi/strimzi-kafka-oauth/releases/tag/{{oRelease.oAuthVersion}}">{{oRelease.oAuthVersion}}</a>{% else %}n/a{% endif %}</td>
           <td class="version">{% if oRelease.kafkaVersions %}{{oRelease.kafkaVersions}}{% endif %}</td>
-          <td class="version">{% if oRelease.kubernetesVersions %}{{oRelease.kubernetesVersions}}{% endif %}</td>
+          <td class="version">{% if oRelease.kubernetesVersions %}{{oRelease.kubernetesVersions}}{% endif %}{% if oRelease.usesCrdV1Beta1 %} <sup><a href="#crd-v1beta1-support">1</a></sup>{% endif %}</td>
         </tr>
           {% endif %}
         {% endfor %}
       </table>
+
+    </div>
+
+    <div id="crd-v1beta1-support" class="width-12-12">
+      <p><sup>1</sup> Uses <code>v1beta1</code> version of the <code>apiextensions.k8s.io</code> API which is supported only in Kubernetes 1.21 and earlier.</p>
     </div>
   </div>
 </div>
