--- a/_includes/downloads/supported-versions-band.html
+++ b/_includes/downloads/supported-versions-band.html
@@ -50,7 +50,7 @@
     </div>
 
     <div id="crd-v1beta1-support" class="width-12-12">
-      <p><sup>1</sup> Uses <code>v1beta1</code> version of the <code>apiextensions.k8s.io</code> API which is supported only in Kubernetes 1.21 and earlier.</p>
+      <p><sup>1</sup> Uses <code>v1beta1</code> version of the <code>apiextensions.k8s.io</code> API which is not supported on Kubernetes 1.22 and newer.</p>
     </div>
   </div>
 </div>
