--- a/_includes/downloads/supported-versions-band.html
+++ b/_includes/downloads/supported-versions-band.html
@@ -41,7 +41,7 @@
           <td class="version">{% if oRelease.bridgeVersion %}<a href="https://github.com/strimzi/strimzi-kafka-bridge/releases/tag/{{oRelease.bridgeVersion}}">{{oRelease.bridgeVersion}}</a>{% endif %}</td>
           <td class="version">{% if oRelease.oAuthVersion %}<a href="https://github.com/strimzi/strimzi-kafka-oauth/releases/tag/{{oRelease.oAuthVersion}}">{{oRelease.oAuthVersion}}</a>{% else %}n/a{% endif %}</td>
           <td class="version">{% if oRelease.kafkaVersions %}{{oRelease.kafkaVersions}}{% endif %}</td>
-          <td class="version">{% if oRelease.kubernetesVersions %}{{oRelease.kubernetesVersions}}{% endif %}{% if oRelease.usesCrdV1Beta1 %} <sup><a href="#crd-v1beta1-support">1</a></sup>{% endif %}</td>
+          <td class="version">{% if oRelease.kubernetesVersions %}{{oRelease.kubernetesVersions}}{% endif %}{% if oRelease.usesCrdV1Beta1 %} <sup><a href="#support-footnotes">1</a></sup>{% endif %}{% if oRelease.usesPdbV1beta1 %} <sup><a href="#support-footnotes">2</a></sup>{% endif %}</td>
         </tr>
           {% endif %}
         {% endfor %}
@@ -49,8 +49,9 @@
 
     </div>
 
-    <div id="crd-v1beta1-support" class="width-12-12">
+    <div id="support-footnotes" class="width-12-12">
       <p><sup>1</sup> Uses <code>v1beta1</code> version of the <code>apiextensions.k8s.io</code> API which is not supported on Kubernetes 1.22 and newer.</p>
+      <p><sup>2</sup> Uses <code>v1beta1</code> version of the <code>PodDisruptionBudget</code> API which is not supported on Kubernetes 1.25 and newer.</p>
     </div>
   </div>
 </div>
