Added Survey link to header
Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_includes/homepage/homepage-announcement-band.html
+++ b/_includes/homepage/homepage-announcement-band.html
@@ -1,7 +1,7 @@
 <div class="component-slim announcement_orange">
   <div class="grid-wrapper">
     <div class="width-12-12">
-            <p>Placeholder for an announcement</p>
+        <p>Please take the <a href="https://www.surveymonkey.com/r/Strimzi-2022"> Strimzi 2022 survey</a> to let us know how you are using Strimzi. </p>
     </div>
   </div>
 </div>
